# vnukovo-bot

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  cliff.toml  pyproject.toml  requirements.txt  run.py  stations.yaml
.devin/: config.local.json
.github/workflows/: auto-deploy.yml  ci.yml  deploy.yml  release.yml
deploy/: Dockerfile  docker-compose.yml
deploy/ansible/: playbook.yml
deploy/grafana/: dashboard.json
deploy/prometheus/: prometheus.yml
deploy/scripts/: backup.sh  deploy.sh  install.sh  provision.sh  rollback.sh
deploy/systemd/: vnukovo-bot.service
docs/: example_resolution.json
relay/: README.md  relay.py
src/: __init__.py  cli.py  config.py  http_client.py  models.py
src/core/: __init__.py  aggregator.py  bucket_engine.py  cross_check.py  deduper.py  forecast_engine.py  market_discovery.py  market_manager.py  poller.py  replay.py  resolver.py
src/notifiers/: __init__.py  discord.py  notifier_router.py  telegram_bot.py  telegram_ui.py  webhook.py
src/ops/: health.py  metrics.py  sentry.py
src/parser/: __init__.py  metar.py  nws_timeseries.py  synop.py
src/sources/: __init__.py  avwx.py  awc.py  checkwx.py  iastate.py  noaa_isd.py  nws_synoptic.py  ogimet_synop.py  open_meteo.py  polymarket_clob.py  polymarket_gamma.py  wunderground.py
src/storage/: __init__.py  db.py
src/storage/migrations/: env.py
tests/: conftest.py  test_aggregator.py  test_bucket_engine.py  test_cross_check.py  test_forecast_engine.py  test_http_client_proxy.py  test_metar_parser.py  test_resolver.py  test_synoptic_parser.py  test_wunderground.py
tests/fixtures/metar/: uuww_corpus.txt
tests/fixtures/nws/: uuww_2025-04-26.json
