[project]
name = "vnukovo-bot"
version = "0.1.0"
description = "Production-grade Polymarket weather-market bot for 'Highest temperature in <city> on <date>' family"
authors = [{ name = "Cognition" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "httpx[http2]>=0.27",
    "httpx-socks>=0.9",
    "aiogram>=3.5,<4",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-metar>=1.11",
    "tenacity>=8.2",
    "loguru>=0.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
    "sentry-sdk>=2.0",
    "tzdata>=2024.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
    "dnspython>=2.6",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "syrupy>=4.6",
    "respx>=0.21",
    "freezegun>=1.4",
]

[project.scripts]
vnukovo-bot = "src.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["data", "deploy", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["B008", "RUF012", "RUF001", "RUF002", "RUF003", "N818"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "data/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/cli.py", "src/ops/*"]
